--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -17,6 +17,8 @@ jobs:
         env:
           - IMAGE: foxy-source
             CLANG_TIDY: true
+          - IMAGE: galactic-source
+          - IMAGE: rolling-source
 
     env:
       DOCKER_IMAGE: moveit/moveit2:${{ matrix.env.IMAGE }}
