Remove galactic and rolling from foxy branch (#110)
* Remove galactic and rolling from foxy branch

* Enable build on foxy push

--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -8,7 +8,7 @@ on:
   pull_request:
   push:
     branches:
-      - ros2
+      - foxy
 
 jobs:
   industrial_ci:
@@ -17,8 +17,6 @@ jobs:
         env:
           - IMAGE: foxy-source
             CLANG_TIDY: true
-          - IMAGE: galactic-source
-          - IMAGE: rolling-source
 
     env:
       DOCKER_IMAGE: moveit/moveit2:${{ matrix.env.IMAGE }}
