Humble CI and clang-format updates

--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -17,6 +17,7 @@ jobs:
         env:
           - IMAGE: galactic-source
             CLANG_TIDY: true
+          - IMAGE: humble-source
           - IMAGE: rolling-source
 
     env:
