--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -7,14 +7,15 @@ on:
   workflow_dispatch:
   pull_request:
   push:
+    branches:
+      - main
 
 jobs:
   pre-commit:
     name: Format
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
       - name: Install clang-format-10
         run: sudo apt-get install clang-format-10
       - name: Install catkin-lint
@@ -28,4 +29,4 @@ jobs:
           rosdep update
           sudo apt-get -q install catkin-lint
           export ROS_DISTRO=noetic
-      - uses: pre-commit/action@v2.0.0
+      - uses: pre-commit/action@v3.0.0
