Add python bindings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,4 +99,24 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+####################
+## Python binding ##
+####################
+
+find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
+find_package(pybind11_vendor REQUIRED)
+find_package(pybind11 REQUIRED)
+
+ament_python_install_package(moveit_visual_tools PACKAGE_DIR python/moveit_visual_tools)
+
+pybind11_add_module(pymoveit_visual_tools python/src/moveit_visual_tools.cpp)
+target_link_libraries(pymoveit_visual_tools PUBLIC moveit_visual_tools)
+ament_target_dependencies(pymoveit_visual_tools PUBLIC pybind11 rviz_visual_tools)
+install(TARGETS pymoveit_visual_tools
+        LIBRARY DESTINATION ${PYTHON_INSTALL_DIR}/moveit_visual_tools)
+install(PROGRAMS
+  python/examples/moveit_visual_tools_demo.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
 ament_package()
