--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -8,14 +8,14 @@ on:
   pull_request:
   push:
     branches:
-      - main
+      - ros2
 
 jobs:
   pre-commit:
     name: Format
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Install clang-format-12
-      run: sudo apt-get install clang-format-12
-    - uses: pre-commit/action@v3.0.0
+    - uses: actions/checkout@v4
+    - name: Install clang-format-14
+      run: sudo apt-get install clang-format-14
+    - uses: pre-commit/action@v3.0.1
