--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -18,4 +18,4 @@ jobs:
     - uses: actions/checkout@v4
     - name: Install clang-format-14
       run: sudo apt-get install clang-format-14
-    - uses: pre-commit/action@v3.0.1
+    - uses: rhaschke/pre-commit-action@main
